Fixed horizontal scrolling

--- a/index/styles.css
+++ b/index/styles.css
@@ -16,6 +16,12 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body, html {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+
 #menuToggle {
   display: block;
   position: relative;
@@ -247,11 +253,6 @@ body {
     text-align: center;
     margin-bottom: 15px;
   }
-
-  #menuToggle {
-    left: 10px; /* Adjust so it fits within mobile screens */
-  }
-
   /* Adjust the name and occupation size */
   .personal-info h1 {
     font-size: 1.5em; /* Make the font size smaller for mobile */
